# ts-feedback

./: README.md
examples/: hello.c
python/: analyse.py  requirements.txt
rulesets/example/queries/: max-function-length.scm
rulesets/tuttest01/: rules.yaml
rulesets/tuttest01/queries/: no-goto.scm
rust/: Cargo.toml
rust/src/: ruleset.rs  runner.rs
src/: main.rs  query_runner.rs  scoring.rs
