[package]
name = "ts-feedback"
version = "0.1.0"
edition = "2024"
authors = ["Dylan Kirby"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-c = "0.23"
walkdir = "2"
anyhow = "1"
thiserror = "1"
streaming-iterator = "0.1.9"
